# structure

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Init_outline_convo.md  README.md  compose.yaml  failure_taxonomy.md  mission.md  modes.md  pyproject.toml  rd_orchestration_topology (2).md  ruff.toml
baseline/: acceptance.md
docs/: ARCHITECTURE.md  BUILD.md  DATASETS.md  DETERMINISM.md  EVALUATION.md  FILE_WRITE_POLICY.md  GLOSSARY.md  INTERFACES.md  KERNELS.md  OBSERVABILITY.md  ONTOLOGY.md  OPERATIONS_RUNBOOK.md  PIPELINES.md  ROADMAP.md  SCHEMAS.md  SECURITY_THREAT_MODEL.md  VALIDATION_GATES.md
eval/: harness.py  metrics.py  report.py
gateway/: __init__.py  compliance.py  logging.py  main.py
ingest/: manifest.jsonl
kernels/: __init__.py  base.py  constants.py  data_summary.py  experiment.py  project.py  statistics.py  summary.py  units.py
models/: __init__.py  clarify.py  gate_decision.py  ingest.py  kernel_io.py  registry.yaml  session.py  task_spec.py  workflow.py
partitions/: policy.md
pipelines/: contracts.py  ingestion.py
plugins/: README.md  __init__.py
policies/: budgets.yaml  data_analysis.yaml  determinism.yaml  file_write_policy.yaml  lab_experiment.yaml  llm_extraction.yaml  unit_disambiguation.yaml
registry/: ast_allowlist.json  domains.json  kernels.json  quantities.json  reason_codes.json
router/: __init__.py  classifier.py  gates.py  llm_extractor.py  workflow_builder.py
runtime/: orchestrator.py
schemas/: ambiguity_report.schema.json  constraint_ast.schema.json  diagnostic_spec.schema.json  gate_decision.schema.json  (+8 more)
(+42 files in other folders)
